--- a/iBiblia.lpi
+++ b/iBiblia.lpi
@@ -8,7 +8,6 @@
       <Title Value="iBiblia"/>
       <UseXPManifest Value="True"/>
       <Icon Value="0"/>
-      <ActiveWindowIndexAtStart Value="-1"/>
     </General>
     <VersionInfo>
       <UseVersionInfo Value="True"/>
@@ -131,14 +130,14 @@
         <PackageName Value="LCL"/>
       </Item2>
     </RequiredPackages>
-    <Units Count="25">
+    <Units Count="26">
       <Unit0>
         <Filename Value="iBiblia.lpr"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="-1"/>
-        <WindowIndex Value="1"/>
+        <EditorIndex Value="1"/>
         <CursorPos Y="25"/>
         <UsageCount Value="207"/>
+        <Loaded Value="True"/>
       </Unit0>
       <Unit1>
         <Filename Value="formprincipal.pas"/>
@@ -147,21 +146,21 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="formPrincipal"/>
-        <IsVisibleTab Value="True"/>
-        <EditorIndex Value="-1"/>
-        <WindowIndex Value="1"/>
-        <TopLine Value="193"/>
-        <CursorPos Y="226"/>
+        <EditorIndex Value="3"/>
+        <TopLine Value="608"/>
+        <CursorPos X="3" Y="610"/>
         <UsageCount Value="207"/>
+        <Loaded Value="True"/>
+        <LoadedDesigner Value="True"/>
       </Unit1>
       <Unit2>
         <Filename Value="versiculo.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Versiculo"/>
-        <EditorIndex Value="-1"/>
-        <WindowIndex Value="1"/>
-        <TopLine Value="1369"/>
-        <CursorPos Y="1382"/>
+        <IsVisibleTab Value="True"/>
+        <EditorIndex Value="5"/>
+        <TopLine Value="1645"/>
+        <CursorPos X="37" Y="1668"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -171,23 +170,24 @@
           <FoldState Value=" TL!d47)"/>
         </ExtraEditor1>
         <UsageCount Value="207"/>
+        <Loaded Value="True"/>
       </Unit2>
       <Unit3>
         <Filename Value="ibibliaxml.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="iBibliaXML"/>
-        <EditorIndex Value="-1"/>
-        <WindowIndex Value="1"/>
-        <TopLine Value="240"/>
-        <CursorPos Y="273"/>
+        <TopLine Value="8"/>
+        <CursorPos X="70" Y="14"/>
         <UsageCount Value="207"/>
+        <Loaded Value="True"/>
       </Unit3>
       <Unit4>
         <Filename Value="projeto.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Projeto"/>
-        <EditorIndex Value="-1"/>
-        <WindowIndex Value="-1"/>
+        <EditorIndex Value="2"/>
+        <TopLine Value="1635"/>
+        <CursorPos X="10" Y="1648"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -196,6 +196,7 @@
           <CursorPos Y="738"/>
         </ExtraEditor1>
         <UsageCount Value="207"/>
+        <Loaded Value="True"/>
       </Unit4>
       <Unit5>
         <Filename Value="sugestao.pas"/>
@@ -211,7 +212,7 @@
         <Filename Value="C:\lazarus\fpc\2.4.3\source\packages\fcl-db\src\base\db.pas"/>
         <TopLine Value="1954"/>
         <CursorPos Y="1980"/>
-        <UsageCount Value="4"/>
+        <UsageCount Value="1"/>
       </Unit6>
       <Unit7>
         <Filename Value="formnovoprojeto.pas"/>
@@ -245,19 +246,19 @@
       <Unit10>
         <Filename Value="C:\lazarus\components\synedit\syncompletion.pas"/>
         <TopLine Value="10"/>
-        <UsageCount Value="10"/>
+        <UsageCount Value="7"/>
       </Unit10>
       <Unit11>
         <Filename Value="C:\lazarus\ide\codecontextform.pas"/>
         <TopLine Value="792"/>
         <CursorPos X="3" Y="742"/>
-        <UsageCount Value="10"/>
+        <UsageCount Value="7"/>
       </Unit11>
       <Unit12>
         <Filename Value="C:\lazarus\lcl\include\control.inc"/>
         <TopLine Value="1669"/>
         <CursorPos Y="1684"/>
-        <UsageCount Value="7"/>
+        <UsageCount Value="4"/>
       </Unit12>
       <Unit13>
         <Filename Value="formpropprojeto.pas"/>
@@ -275,7 +276,7 @@
         <Filename Value="C:\lazarus\lcl\lclproc.pas"/>
         <TopLine Value="301"/>
         <CursorPos X="31" Y="346"/>
-        <UsageCount Value="22"/>
+        <UsageCount Value="19"/>
       </Unit14>
       <Unit15>
         <Filename Value="memoversiculo.pas"/>
@@ -293,7 +294,7 @@
         <WindowIndex Value="1"/>
         <TopLine Value="25"/>
         <CursorPos X="51" Y="45"/>
-        <UsageCount Value="43"/>
+        <UsageCount Value="40"/>
       </Unit16>
       <Unit17>
         <Filename Value="PCRE.pas"/>
@@ -310,11 +311,10 @@
         <ComponentName Value="frmExportarProjeto"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="-1"/>
-        <WindowIndex Value="1"/>
-        <TopLine Value="49"/>
-        <CursorPos Y="66"/>
+        <EditorIndex Value="4"/>
         <UsageCount Value="203"/>
+        <Loaded Value="True"/>
+        <LoadedDesigner Value="True"/>
       </Unit18>
       <Unit19>
         <Filename Value="exportarprojeto.pas"/>
@@ -341,7 +341,7 @@
         <Filename Value="C:\lazarus\fpc\2.6.2\source\rtl\objpas\strutils.pp"/>
         <TopLine Value="203"/>
         <CursorPos Y="14"/>
-        <UsageCount Value="35"/>
+        <UsageCount Value="32"/>
       </Unit21>
       <Unit22>
         <Filename Value="formverserules.pas"/>
@@ -361,7 +361,7 @@
         <WindowIndex Value="1"/>
         <TopLine Value="2"/>
         <CursorPos X="33" Y="41"/>
-        <UsageCount Value="108"/>
+        <UsageCount Value="105"/>
       </Unit23>
       <Unit24>
         <Filename Value="C:\tools\lazarus\fpc\3.0.0\source\packages\rtl-objpas\src\inc\strutils.pp"/>
@@ -369,10 +369,140 @@
         <WindowIndex Value="1"/>
         <TopLine Value="26"/>
         <CursorPos X="21" Y="43"/>
-        <UsageCount Value="100"/>
+        <UsageCount Value="97"/>
       </Unit24>
+      <Unit25>
+        <Filename Value="C:\tools\lazarus\lcl\stdctrls.pp"/>
+        <UnitName Value="StdCtrls"/>
+        <EditorIndex Value="6"/>
+        <TopLine Value="1517"/>
+        <CursorPos X="41" Y="1522"/>
+        <UsageCount Value="27"/>
+        <Loaded Value="True"/>
+      </Unit25>
     </Units>
-    <JumpHistory HistoryIndex="-1"/>
+    <JumpHistory Count="30" HistoryIndex="29">
+      <Position1>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="1588" Column="70" TopLine="1554"/>
+      </Position1>
+      <Position2>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="190" Column="25" TopLine="169"/>
+      </Position2>
+      <Position3>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="245" TopLine="219"/>
+      </Position3>
+      <Position4>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="1587" Column="70" TopLine="1553"/>
+      </Position4>
+      <Position5>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="244" Column="27" TopLine="223"/>
+      </Position5>
+      <Position6>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="1587" Column="70" TopLine="1553"/>
+      </Position6>
+      <Position7>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="244" Column="27" TopLine="223"/>
+      </Position7>
+      <Position8>
+        <Filename Value="formexportar.pas"/>
+        <Caret Line="74" Column="118" TopLine="67"/>
+      </Position8>
+      <Position9>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="215" Column="82" TopLine="193"/>
+      </Position9>
+      <Position10>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="321" Column="26" TopLine="287"/>
+      </Position10>
+      <Position11>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="455" Column="26" TopLine="421"/>
+      </Position11>
+      <Position12>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="546" Column="35" TopLine="512"/>
+      </Position12>
+      <Position13>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="321" Column="60" TopLine="300"/>
+      </Position13>
+      <Position14>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="1028" TopLine="1015"/>
+      </Position14>
+      <Position15>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="657" Column="17" TopLine="629"/>
+      </Position15>
+      <Position16>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="157" Column="31" TopLine="136"/>
+      </Position16>
+      <Position17>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="1062" Column="47" TopLine="1062"/>
+      </Position17>
+      <Position18>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="658" Column="13" TopLine="632"/>
+      </Position18>
+      <Position19>
+        <Filename Value="iBiblia.lpr"/>
+        <Caret Line="25"/>
+      </Position19>
+      <Position20>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="1070" Column="29" TopLine="1051"/>
+      </Position20>
+      <Position21>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="321" Column="60" TopLine="300"/>
+      </Position21>
+      <Position22>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="92" Column="48" TopLine="60"/>
+      </Position22>
+      <Position23>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="1422" Column="30" TopLine="1394"/>
+      </Position23>
+      <Position24>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="1657" Column="53" TopLine="1641"/>
+      </Position24>
+      <Position25>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="91" Column="52" TopLine="64"/>
+      </Position25>
+      <Position26>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="1472" Column="32" TopLine="1462"/>
+      </Position26>
+      <Position27>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="1610" Column="3" TopLine="1608"/>
+      </Position27>
+      <Position28>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="586" Column="2" TopLine="562"/>
+      </Position28>
+      <Position29>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="1665" Column="48" TopLine="1646"/>
+      </Position29>
+      <Position30>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="1473" Column="20" TopLine="1453"/>
+      </Position30>
+    </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
     <Version Value="11"/>
@@ -413,7 +543,7 @@
         <WatchScope Value="wpsLocal"/>
         <WatchKind Value="wpkWrite"/>
         <Source Value="versiculo.pas"/>
-        <Line Value="1176"/>
+        <Line Value="1199"/>
       </Item2>
     </BreakPoints>
     <Watches Count="3">
