--- a/iBiblia.lpi
+++ b/iBiblia.lpi
@@ -163,9 +163,10 @@
         <Filename Value="versiculo.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Versiculo"/>
+        <IsVisibleTab Value="True"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="1358"/>
-        <CursorPos X="26" Y="1359"/>
+        <TopLine Value="1160"/>
+        <CursorPos Y="1162"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="7"/>
@@ -181,7 +182,7 @@
         <UnitName Value="iBibliaXML"/>
         <EditorIndex Value="10"/>
         <WindowIndex Value="1"/>
-        <CursorPos X="57" Y="8"/>
+        <CursorPos X="20" Y="14"/>
         <UsageCount Value="207"/>
         <Loaded Value="True"/>
       </Unit3>
@@ -189,11 +190,10 @@
         <Filename Value="projeto.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Projeto"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="6"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="1322"/>
-        <CursorPos Y="1305"/>
+        <TopLine Value="1321"/>
+        <CursorPos X="30" Y="1334"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -389,7 +389,6 @@
         <CursorPos X="5" Y="100"/>
         <UsageCount Value="228"/>
         <Loaded Value="True"/>
-        <LoadedDesigner Value="True"/>
       </Unit25>
       <Unit26>
         <Filename Value="C:\lazarus\fpc\2.6.4\source\rtl\win\wininc\ascdef.inc"/>
@@ -418,12 +417,11 @@
       <Unit29>
         <Filename Value="twAutomate.pas"/>
         <IsPartOfProject Value="True"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="4"/>
         <WindowIndex Value="1"/>
         <TopLine Value="164"/>
         <CursorPos X="23" Y="117"/>
-        <UsageCount Value="54"/>
+        <UsageCount Value="55"/>
         <Loaded Value="True"/>
       </Unit29>
       <Unit30>
@@ -450,7 +448,7 @@
         <WindowIndex Value="1"/>
         <TopLine Value="29"/>
         <CursorPos Y="44"/>
-        <UsageCount Value="101"/>
+        <UsageCount Value="102"/>
         <Loaded Value="True"/>
       </Unit32>
       <Unit33>
@@ -550,7 +548,7 @@
         <WindowIndex Value="1"/>
         <TopLine Value="93"/>
         <CursorPos X="23" Y="122"/>
-        <UsageCount Value="12"/>
+        <UsageCount Value="13"/>
         <Loaded Value="True"/>
       </Unit44>
       <Unit45>
@@ -589,124 +587,124 @@
     </Units>
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="554" Column="48" TopLine="529"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="1181" TopLine="1167"/>
       </Position1>
       <Position2>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="721" TopLine="707"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="1184" TopLine="1167"/>
       </Position2>
       <Position3>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="723" TopLine="707"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="1154" Column="8" TopLine="1143"/>
       </Position3>
       <Position4>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="725" TopLine="707"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="1147" TopLine="1142"/>
       </Position4>
       <Position5>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="726" TopLine="707"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="1188" Column="7" TopLine="1140"/>
       </Position5>
       <Position6>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="727" TopLine="707"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="1147" TopLine="1140"/>
       </Position6>
       <Position7>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="721" TopLine="707"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="1148" TopLine="1140"/>
       </Position7>
       <Position8>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="523" Column="5" TopLine="509"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="1149" TopLine="1140"/>
       </Position8>
       <Position9>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="721" TopLine="707"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="1152" TopLine="1140"/>
       </Position9>
       <Position10>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="723" TopLine="707"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="1193" Column="19" TopLine="1175"/>
       </Position10>
       <Position11>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="725" TopLine="707"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="1147" TopLine="1132"/>
       </Position11>
       <Position12>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="721" TopLine="707"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="1205" TopLine="1192"/>
       </Position12>
       <Position13>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="260" TopLine="247"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="1147" TopLine="1132"/>
       </Position13>
       <Position14>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="721" TopLine="706"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="1148" TopLine="1132"/>
       </Position14>
       <Position15>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="723" TopLine="706"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="1149" TopLine="1140"/>
       </Position15>
       <Position16>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="629" TopLine="615"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="1152" TopLine="1140"/>
       </Position16>
       <Position17>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="131" Column="15" TopLine="118"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="1154" TopLine="1140"/>
       </Position17>
       <Position18>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1304" TopLine="1290"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="1155" TopLine="1140"/>
       </Position18>
       <Position19>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="721" TopLine="712"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="1154" TopLine="1140"/>
       </Position19>
       <Position20>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1304" TopLine="1290"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="1156" TopLine="1140"/>
       </Position20>
       <Position21>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="335" TopLine="321"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="1157" TopLine="1140"/>
       </Position21>
       <Position22>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="336" TopLine="321"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="1158" TopLine="1140"/>
       </Position22>
       <Position23>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1304" TopLine="1290"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="1159" TopLine="1140"/>
       </Position23>
       <Position24>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="335" TopLine="321"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="1160" TopLine="1140"/>
       </Position24>
       <Position25>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="721" TopLine="712"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="1164" TopLine="1140"/>
       </Position25>
       <Position26>
-        <Filename Value="twAutomate.pas"/>
-        <Caret Line="152" Column="22" TopLine="147"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="1165" TopLine="1152"/>
       </Position26>
       <Position27>
-        <Filename Value="twAutomate.pas"/>
-        <Caret Line="117" Column="26" TopLine="164"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="1167" TopLine="1152"/>
       </Position27>
       <Position28>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1304" TopLine="1290"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="1184" TopLine="1170"/>
       </Position28>
       <Position29>
-        <Filename Value="twsyncthread.pas"/>
-        <Caret Line="49" TopLine="32"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="1188" TopLine="1170"/>
       </Position29>
       <Position30>
-        <Filename Value="twAutomate.pas"/>
-        <Caret Line="117" Column="26" TopLine="164"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="1147" TopLine="1132"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
@@ -736,7 +734,7 @@
     </Linking>
   </CompilerOptions>
   <Debugging>
-    <BreakPoints Count="2">
+    <BreakPoints Count="4">
       <Item1>
         <Kind Value="bpkSource"/>
         <WatchScope Value="wpsLocal"/>
@@ -751,6 +749,20 @@
         <Source Value="projeto.pas"/>
         <Line Value="1426"/>
       </Item2>
+      <Item3>
+        <Kind Value="bpkSource"/>
+        <WatchScope Value="wpsLocal"/>
+        <WatchKind Value="wpkWrite"/>
+        <Source Value="versiculo.pas"/>
+        <Line Value="1147"/>
+      </Item3>
+      <Item4>
+        <Kind Value="bpkSource"/>
+        <WatchScope Value="wpsLocal"/>
+        <WatchKind Value="wpkWrite"/>
+        <Source Value="versiculo.pas"/>
+        <Line Value="1189"/>
+      </Item4>
     </BreakPoints>
     <Watches Count="1">
       <Item1>
